# openchronos-ng-elf

./: .gitignore  CMakeLists.txt  Makefile  README.md  boot.c  openchronos.c
.github/workflows/: build.yml
drivers/: battery.c  battery.h  bmp_ps.c  bmp_ps.h  display.c  display.h  ports.c  ps.c  ps.h  ps_lib.c  ps_lib.h  rtca.c  rtca.h  temperature.c  temperature.h  timer.c  timer.h  vti_as.c  vti_as.h  vti_ps.c  vti_ps.h
modules/: altitude.c  altitude.cfg  altitude.h  backlight.c  backlight.cfg  flyback.c  flyback.cfg  githash.c  githash.cfg  mathutils.c  mathutils.h
toolchains/: toolchain-msp430-gcc-ti.cmake
tools/: altitude-tables.rb  config.py  elf.py  field_encodings.py  make_modinit.py  memory.py  modules.py  sorteddict.py  update_githash.sh  update_rtca_now.sh
